--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "natours landing page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass ./sass/main.scss ./assets/styles.css"
   },
   "repository": {
     "type": "git",
